--- a/index.html
+++ b/index.html
@@ -20,22 +20,41 @@ Date:
         </div><!--header-->
 
         <div class="side1">
-          <img src="images/kobe.jpg" alt="Kobe Bean Bryant">
+          <img src="images/James.jpg" alt="Kobe Bean Bryant">
         </div><!--side1-->
 
-        <div class="section1">section1</div><!--section1-->
+        <div class="section1"> <h2>What is NBA</h2>
+<p>The National Basketball Associatio (NBA) is a professional basketball league in North America. The league is composed of 30 teams and is one of the four major professional sports leagues in the United States and Canada. It is the premier men's professional basketball league in the world.</p></div><!--section1-->
 
-        <div class="section2">section2</div><!--section2-->
+        <div class="section2">
+          <h3>NBA Legends</h3>
+        <ul> 
+         <li>Kobe Bryant</li>              
+          <li>Kawhi Leonard</li>   
+          <li>Kyrie Irving</li>
+          <li>Hakeem Olajuwan</li>
+          <li>Lebron James</li>
+          <li>Larry Bird</li>
+        </ul>
+        </div><!--section2-->
 
         <div class="videoSection">
-          <iframe width="100%" height="200" src="https://www.youtube.com/embed/t22flliJLTQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" height="280" src="https://www.youtube.com/embed/t22flliJLTQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div><!--videoSection-->
 
-        <div class="side2">side2</div><!--side2-->
+        <div class="side2">
+          <img src="images/Stadium.jpg" alt="Kevin Garnett">
+        </div><!--side2-->
 
-        <div class="references">references</div>
+        <div class="references">
+          <h3>References</h3>
+          <a href="https://www.youtube.com/watch?v=t22flliJLTQ">NBA Top 100 (Youtube)</a>
+          <a href="https://pixabay.com/images/search/nba/">NBA Images</a>
+        </div>
         
-        <div class="footer">footer</div><!--footer-->
+        <div class="footer">
+          Copyright Elijah Tolai 20201
+        </div><!--footer-->
     </div>
 
 </body>
