images and everything else

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ Date:
         </div><!--header-->
 
         <div class="side1">
-          <img src="images/James.jpg" alt="Kobe Bean Bryant">
+          <img src="images/nba.svg" alt="NBA logo">
         </div><!--side1-->
 
-        <div class="section1"> <h2>What is NBA</h2>
+        <div class="section1"> <h2>What is NBA?</h2>
 <p>The National Basketball Associatio (NBA) is a professional basketball league in North America. The league is composed of 30 teams and is one of the four major professional sports leagues in the United States and Canada. It is the premier men's professional basketball league in the world.</p></div><!--section1-->
 
         <div class="section2">
@@ -32,24 +32,38 @@ Date:
          <li>Kobe Bryant</li>              
           <li>Kawhi Leonard</li>   
           <li>Kyrie Irving</li>
-          <li>Hakeem Olajuwan</li>
-          <li>Lebron James</li>
-          <li>Larry Bird</li>
+          <li>Micheal Jordan</li>
+          <li>Kevin Durant</li>    ​
+          <li>Wilt Chamberlin</li>
+          <li>James Worthy</li> 
+          <li>Scottie Pippen</li>
+          <li>Tracy Mcgrady</li>
+          <li>Reggie Miller</li> 
+          <li>Kevin Garnett</li> 
+          <li>Steven Adams</li>
+          <li>Stephen Curry</li> 
+          <li>Bill Russell</li> 
+          <li>Pete Maravich</li>
+          <li>Tim Hardaway</li>
+          <li>Paul Pierce</li>
+          <li>Shaquille O'Neal</li>
         </ul>
         </div><!--section2-->
 
         <div class="videoSection">
-          <iframe width="100%" height="280" src="https://www.youtube.com/embed/t22flliJLTQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" height="500" src="https://www.youtube.com/embed/t22flliJLTQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div><!--videoSection-->
 
         <div class="side2">
-          <img src="images/Stadium.jpg" alt="Kevin Garnett">
+          <img src="images/nets.svg" alt="Brooklyn Nets an NBA team">
         </div><!--side2-->
 
         <div class="references">
           <h3>References</h3>
-          <a href="https://www.youtube.com/watch?v=t22flliJLTQ">NBA Top 100 (Youtube)</a>
-          <a href="https://pixabay.com/images/search/nba/">NBA Images</a>
+          <a href="hhttps://www.youtube.com/watch?v=t22flliJLTQ">NBA Top 100 (Youtube)</a><br>
+          <a href="https://en.wikipedia.org/wiki/National_Basketball_Association#/media/File:National_Basketball_Association_logo.svg">NBA Logo</a><br>
+          <a href="https://en.wikipedia.org/wiki/Brooklyn_Nets#/media/File:Brooklyn_Nets_newlogo.svg">Brooklyn Logo</a><br>
+          <a href="https://en.wikipedia.org/wiki/National_Basketball_Association">NBA Information</a>
         </div>
         
         <div class="footer">
