--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Date:
         </div><!--side1-->
 
         <div class="section1"> <h2>What is NBA?</h2>
-<p>The National Basketball Associatio (NBA) is a professional basketball league in North America. The league is composed of 30 teams and is one of the four major professional sports leagues in the United States and Canada. It is the premier men's professional basketball league in the world.</p></div><!--section1-->
+<p>The National Basketball Associatio (NBA) is a professional basketball league in North America. The league is composed of 30 teams and is one of the four major professional sports leagues in the United States and Canada. It is the premier men's professional basketball league in the world.The league was founded in New York City on June 6, 1946, as the Basketball Association of America .It changed its name to the National Basketball Association on August 3, 1949, after merging with the competing National Basketball League (NBL).The NBA's regular season runs from October to April, with each team playing 82 games. The league's playoff tournament extends into June. As of 2020, NBA players are the world's best paid athletes by average annual salary per player.</p></div><!--section1-->
 
         <div class="section2">
           <h3>NBA Legends</h3>
@@ -34,7 +34,7 @@ Date:
           <li>Kyrie Irving</li>
           <li>Micheal Jordan</li>
           <li>Kevin Durant</li>    ​
-          <li>Wilt Chamberlin</li>
+          <li>Wilt Chamberlain</li>
           <li>James Worthy</li> 
           <li>Scottie Pippen</li>
           <li>Tracy Mcgrady</li>
