padding for side 2

--- a/index.html
+++ b/index.html
@@ -60,14 +60,15 @@ Date:
 
         <div class="references">
           <h3>References</h3>
-          <a href="hhttps://www.youtube.com/watch?v=t22flliJLTQ">NBA Top 100 (Youtube)</a><br>
+          <a href="https://www.youtube.com/embed/ffE2rv8OoVM">NBA Video (Youtube)</a><br>
+        
           <a href="https://en.wikipedia.org/wiki/National_Basketball_Association#/media/File:National_Basketball_Association_logo.svg">NBA Logo</a><br>
           <a href="https://en.wikipedia.org/wiki/Brooklyn_Nets#/media/File:Brooklyn_Nets_newlogo.svg">Brooklyn Logo</a><br>
           <a href="https://en.wikipedia.org/wiki/National_Basketball_Association">NBA Information</a>
         </div>
         
         <div class="footer">
-          Copyright Elijah Tolai 20201
+          (Copyright Elijah Tolai 2021)
         </div><!--footer-->
     </div>
 
