the padding for the footer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Date:
         </div><!--side1-->
 
         <div class="section1"> <h2>What is NBA?</h2>
-<p>The National Basketball Associatio (NBA) is a professional basketball league in North America. The league is composed of 30 teams and is one of the four major professional sports leagues in the United States and Canada. It is the premier men's professional basketball league in the world.The league was founded in New York City on June 6, 1946, as the Basketball Association of America .It changed its name to the National Basketball Association on August 3, 1949, after merging with the competing National Basketball League (NBL).The NBA's regular season runs from October to April, with each team playing 82 games. The league's playoff tournament extends into June. As of 2020, NBA players are the world's best paid athletes by average annual salary per player.</p></div><!--section1-->
+<p>The National Basketball Association (NBA) is a professional basketball league in North America. The league is composed of 30 teams and is one of the four major professional sports leagues in the United States and Canada. It is the premier men's professional basketball league in the world.The league was founded in New York City on June 6, 1946, as the Basketball Association of America .It changed its name to the National Basketball Association on August 3, 1949, after merging with the competing National Basketball League (NBL).The NBA's regular season runs from October to April, with each team playing 82 games. The league's playoff tournament extends into June. As of 2020, NBA players are the world's best paid athletes by average annual salary per player.</p></div><!--section1-->
 
         <div class="section2">
           <h3>NBA Legends</h3>
@@ -51,7 +51,7 @@ Date:
         </div><!--section2-->
 
         <div class="videoSection">
-         <iframe width="665" height="550" src="https://www.youtube.com/embed/ffE2rv8OoVM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <iframe width="1210" height="900" src="https://www.youtube.com/embed/ffE2rv8OoVM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div><!--videoSection-->
 
         <div class="side2">
@@ -63,7 +63,8 @@ Date:
           <a href="https://www.youtube.com/embed/ffE2rv8OoVM">NBA Video (Youtube)</a><br>
         
           <a href="https://en.wikipedia.org/wiki/National_Basketball_Association#/media/File:National_Basketball_Association_logo.svg">NBA Logo</a><br>
-          <a href="https://en.wikipedia.org/wiki/Brooklyn_Nets#/media/File:Brooklyn_Nets_newlogo.svg">Brooklyn Logo</a><br>
+          <a 
+          <iframe href="https://en.wikipedia.org/wiki/Brooklyn_Nets#/media/File:Brooklyn_Nets_newlogo.svg">Brooklyn Nets Logo</a><br>
           <a href="https://en.wikipedia.org/wiki/National_Basketball_Association">NBA Information</a>
         </div>
         
